# Trasher

./: .gitignore  CLAUDE.md  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: classifier-ci.yml  ios-ci.yml  pi-ci.yml
classifier/: .env.example  README.md  pyproject.toml
classifier/src/trash_classifier/: __main__.py  config.py  gemini.py  prompts.py  server.py
classifier/tests/: conftest.py  test_gemini.py  test_live.py  test_prompts.py  test_schema.py  test_server.py
docs/: dev-cycle.md  hardware.md  pi-setup.md  protocol.md  runbook.md
fixtures/: classify-response.json
fixtures/proto-v1/: messages.json
ios/: Package.swift  README.md
ios/App/: project.yml
ios/App/Sources/: AppModel.swift  DemoDriver.swift  StepperView.swift  Theme.swift  TrasherApp.swift
ios/App/Sources/Screens/: OperatorView.swift  RewardView.swift  Screens.swift  SeedlingView.swift  SettingsView.swift
ios/Sources/TrasherCore/: BLECentral.swift  Classification.swift  CycleStep.swift  EcoReward.swift  PeripheralLink.swift  PhotoFetcher.swift  PiClassification.swift  PiConfig.swift  PiConfigService.swift  Presentation.swift  Protocol.swift  RemoteClassification.swift  SeedReward.swift  SessionCoordinator.swift  SortStats.swift
ios/Tests/TrasherCoreTests/: ContractFixturesTests.swift  CycleStepTests.swift  EcoRewardTests.swift  NormalizerTests.swift  PhotoFetcherTests.swift  PiClassificationContractTests.swift  PiClassificationTests.swift  PiConfigServiceTests.swift  PresentationTests.swift  ProtocolTests.swift  RemoteClassificationTests.swift  SeedRewardTests.swift  SessionCoordinatorTests.swift  SortStatsTests.swift  StubURLProtocol.swift
pi/: README.md  prompts.toml  pyproject.toml  requirements-pi.txt
pi/deploy/: bt-agent.service  install.sh  trash-sorter.env.example  trash-sorter.service
pi/scripts/: e2e_pi.sh
pi/src/trash_sorter/: __init__.py  __main__.py  app.py  config.py  config_manager.py  factory.py  protocol.py  sim.py  state.py
pi/src/trash_sorter/ble/: __init__.py  base.py  bless_impl.py  mock.py
pi/src/trash_sorter/classify/: __init__.py  config.py  gemini.py  prompts.py  schema.py
pi/src/trash_sorter/hardware/: __init__.py  base.py  belt.py  button.py  display.py  gpiozero_impl.py  mock.py  sorter.py
pi/src/trash_sorter/vision/: __init__.py  base.py  mock.py  motion.py  picamera2_impl.py  tuning.py
pi/src/trash_sorter/web/: __init__.py  photo_server.py
pi/tests/: test_belt_driver.py  test_button.py  test_classify.py  test_classify_contract.py  test_config_manager.py  test_contract_fixtures.py  test_display.py  test_e2e_http.py  test_factory.py  test_motion.py  test_orchestrator.py  test_photo_server.py  test_protocol.py  test_simulation.py  test_sort_sequence.py  test_state.py  test_tuning.py
