[project]
name = "trash-sorter"
version = "0.1.0"
description = "AI 쓰레기 자동 분류기 — Raspberry Pi 제어 프로그램 (BLE Peripheral + HTTP 사진서버 + 비전 + 서보/벨트)"
requires-python = ">=3.11"
dependencies = [
    "numpy",  # 프레임차분 변이검출(opencv 불필요, 플랫폼 무관)
    "google-auth>=2.30",  # Gemini 분류(서비스계정 인증)
    "requests>=2.31",
]

# 하드웨어 의존(picamera2/gpiozero/bless)은 Linux 전용이며 sdist가 macOS에서 빌드되지 않는다
# (python-prctl 등). uv universal 해석에서 분리하기 위해 pyproject가 아닌 requirements-pi.txt로
# 관리한다. Pi에서: `uv sync && uv pip install -r requirements-pi.txt`. 자세히는 README 참조.

# uv 기본 설치 그룹(PEP 735). `uv sync`만으로 설치된다.
[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
trash-sorter = "trash_sorter.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["trash_sorter"]
mypy_path = "src"
ignore_missing_imports = true   # picamera2/gpiozero/bless 등 Pi 전용 모듈은 mac에 없음
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# E2E(HTTP 전구간)는 기본 실행에서 제외 — 느리고(서브프로세스 기동) 라이브 Pi 의존.
# 실행: `uv run pytest -m e2e`. 라이브 타깃 미도달 시 개별 테스트가 skip된다.
addopts = "-m 'not e2e'"
markers = [
    "e2e: 통신 경로(HTTP) 전구간 E2E. 기본 제외 — `uv run pytest -m e2e`로 실행.",
]
